--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -118,7 +118,8 @@
     width: 48px;
     height: 48px;
     text-align: left;
-    background-color: #11abb0;
+    margin-top: 10px;
+    background-color: #f06000;
     position: relative;
     border: none;
     float: right;
